Bug 1700848 - Destroy RenderCompositor by root WebRenderBridgeParent's ClearResources() r=nical

Root WebRenderBridgeParent's  ClearResources() call is expected to destroy RenderCompositor. It is necessary to avoid conflict between RenderCompositors and to avoid use after free.

Differential Revision: https://phabricator.services.mozilla.com/D109693